[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=4]
[ext_resource path="res://Juego/Naves/Player/impactos.ogg" type="AudioStream" id=5]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.25 )

[node name="Canion" parent="." instance=ExtResource( 2 )]
position = Vector2( 3.96851, 0 )

[node name="ImpactosSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
